--- a/index.html
+++ b/index.html
@@ -1,153 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 4, from LayoutIt!</title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+	<title>Nimitta : एक संकल्प</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+	<meta name="description" content="Source code generated using layoutit.com">
+	<meta name="author" content="Ninad Sinha!">
 
-  </head>
-  <body>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 
-    <div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12">
-			<h3 class="text-center text-primary">
-				Nimitta :
-			</h3>
-			<div class="carousel slide" id="carousel-98305">
-				<ol class="carousel-indicators">
-					<li data-slide-to="0" data-target="#carousel-98305">
-					</li>
-					<li data-slide-to="1" data-target="#carousel-98305" class="active">
-					</li>
-					<li data-slide-to="2" data-target="#carousel-98305">
-					</li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item">
-						<img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg">
-						<div class="carousel-caption">
-							<h4>
-								First Thumbnail label
-							</h4>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
+</head>
+
+<body>
+	<div class="bg-img">
+
+	</div>
+	<div class="container heading-container heading-text">
+		<h3 class="text-center push-text-down">
+			Nimitta : एक संकल्प
+		</h3>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-12">
+
+				<div class="carousel slide" id="carousel-98305">
+					<ol class="carousel-indicators">
+						<li data-slide-to="0" data-target="#carousel-98305">
+						</li>
+						<li data-slide-to="1" data-target="#carousel-98305" class="active">
+						</li>
+						<li data-slide-to="2" data-target="#carousel-98305">
+						</li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item">
+							<img class="d-block w-100" alt="Carousel Bootstrap First"
+								src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg">
+							<div class="carousel-caption">
+								<h4>
+									First Thumbnail label
+								</h4>
+								<p>
+									Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+									porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								</p>
+							</div>
 						</div>
-					</div>
-					<div class="carousel-item active">
-						<img class="d-block w-100" alt="Carousel Bootstrap Second" src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg">
-						<div class="carousel-caption">
-							<h4>
-								Second Thumbnail label
-							</h4>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
+						<div class="carousel-item active">
+							<img class="d-block w-100" alt="Carousel Bootstrap Second"
+								src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg">
+							<div class="carousel-caption">
+								<h4>
+									Second Thumbnail label
+								</h4>
+								<p>
+									Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+									porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								</p>
+							</div>
 						</div>
-					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" alt="Carousel Bootstrap Third" src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg">
-						<div class="carousel-caption">
-							<h4>
-								Third Thumbnail label
-							</h4>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
+						<div class="carousel-item">
+							<img class="d-block w-100" alt="Carousel Bootstrap Third"
+								src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg">
+							<div class="carousel-caption">
+								<h4>
+									Third Thumbnail label
+								</h4>
+								<p>
+									Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+									porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								</p>
+							</div>
 						</div>
-					</div>
-				</div> <a class="carousel-control-prev" href="#carousel-98305" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-98305" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+					</div> <a class="carousel-control-prev" href="#carousel-98305" data-slide="prev"><span
+							class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a
+						class="carousel-control-next" href="#carousel-98305" data-slide="next"><span
+							class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<h3>
+					Nimitta : About our name
+				</h3>
+				<h4>
+					निमित्त : हमारे नाम के बारे में
+				</h4>
+				<p>
+					Our name NIMITTA (निमित्त), a Hindi word, means the instrument or cause or medium, underlines our
+					philosophy, vision and strategy. NIMITTA is strong both in advocacy and action fronts. We have
+					worked in the field of providing social and legal status to the married couples, a first of its kind
+					all over India, also in the areas of health, sanitation, education and livelihoods in Jharkhand,
+					India.
+				</p>
+				<p>
+					<a class="btn" href="#">View details »</a>
+				</p>
+			</div>
+			<div class="col-md-4">
+				<h3>
+					Nimitta : Our Mission
+				</h3>
+				<h4>
+					निमित्त : हमारे मकसद
+				</h4>
+				<p>
+					Our goal is to bring forth people from diverse sections of society for common human interest
+					developmental goals. Ulitmately, we strive for all round sustainable development of society focusing
+					upon the underprivileged and disadvantaged through work in area of health care, livelihood
+					promotion, education, savings & micro-credit, indigenous and folk-art forms, skill development,
+					institution building, infrastructural development, environment & ecology improvement and other
+					allied approaches.
+				</p>
+				<p>
+					<a class="btn" href="#">View details »</a>
+				</p>
+			</div>
+			<div class="col-md-4">
+				<h3>
+					Nimitta : Our Vision
+				</h3>
+				<h4>
+					निमित्त : हमारे सोंच
+				</h4>
+				<p>
+					Our vision is to work towards a society where every person is able to realize his/her optimum
+					potential and participates and contributes to the development of his/her community, state, nation
+					and the world while staying rooted in its own milieu and culture.
+				</p>
+				<p>
+					<a class="btn" href="#">View details »</a>
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8">
+				<p class="lead text-muted">
+					In <em>2016-17</em>, we identified a widespread women specific issue and a cause accelerating the
+					poverty, leading to many other social problems, the tradition of <strong>dhukku</strong>. As a
+					result, we conducted our first mass marriage of live-in couples in Khunti of 21 couples. Since then,
+					we have conducted similar mass-marriage ceremonies every year, <strong><em>marrying off more than
+							600 couples and improving the life of many others </em> </strong>.
+				</p>
+			</div>
+			<div class="col-md-4">
+				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+					class="rounded" />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+					class="rounded" />
+			</div>
+			<div class="col-md-8">
+				<p class="lead text-muted">
+					During 2015-16 we implemented a <em><strong>World Bank project on water and sanitation</strong></em>
+					in 10 villages of Khunti block and district. We not only raised awareness on water and hygiene but
+					also developed DPR of water security plan and supply system, Solid Liquid Waste Management among
+					other activities for all ten villages in Khunti.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8">
+				<p class="lead text-muted">
+					During 2014-15 we carried out Birth Registration Training Program, a two day training program was
+					held at ViSWA Centre, Kanke Road, Ranchi for forty registrars and technical staff working in the
+					registration unit of Ranchi, Lohardaga and Khunti districts. The training was funded by UNICEF,
+					conducted by two Assistant Director of ORGI and implemented by NIMITTA.
+				</p>
+			</div>
+			<div class="col-md-4">
+				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+					class="rounded" />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+					class="rounded" />
+			</div>
+			<div class="col-md-8">
+				<p class="lead text-muted">
+					Another milestone was when NIMITTA got the opportunity to document the policy changes, innovations
+					and initiatives of the Water and Sanitation Department of Govt. of Jharkhand during 2010 – 2014 in
+					the backdrop of review and revival of national flagship programs NRDWP and NBA in the form of book
+					Abua Raj NawaKhoij: From Policy to Practice has been published by UNDP. We got an opportunity
+					to work and coordinate with various agencies working in varied areas but dedicated to cause of
+					improving water and sanitation situation in Jharkhand. We also supported the National Games
+					Committee, Jharkhand and Jharkhand Swimming Association in bringing out different documents and
+					communication materials.
+				</p>
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="col-md-4">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-		<div class="col-md-4">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-		<div class="col-md-4">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-8">
-			<p class="lead text-muted">
-				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
-			</p>
-		</div>
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded" />
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded" />
-		</div>
-		<div class="col-md-8">
-			<p class="lead text-muted">
-				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
-			</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-8">
-			<p class="lead text-muted">
-				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
-			</p>
-		</div>
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded" />
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-4">
-			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded" />
-		</div>
-		<div class="col-md-8">
-			<p class="lead text-muted">
-				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
-			</p>
-		</div>
-	</div>
-</div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/scripts.js"></script>
+</body>
+
 </html>
