--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="Ninad Sinha!">
 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
 
 </head>
 
