Add type for css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta name="description" content="Source code generated using layoutit.com">
 	<meta name="author" content="Ninad Sinha!">
 
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/main.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="css/main.css" rel="stylesheet" type="text/css">
 
 </head>
 
