Remove config file

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 								</h4>
 								<p>
 									Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-									porta gravijfljasdljfljasldkjflda at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+									porta gravijfljasdljfljasldkjflda at eget metus. Nullam id dolor id nibh ultricies
+									vehicula ut id elit.
 								</p>
 							</div>
 						</div>
@@ -177,14 +178,49 @@
 				</p> -->
 			</div>
 		</div>
+		<h4>Our life changing initiatives are : </h4>
 		<div class="row">
 			<div class="col-md-8">
 				<p class="lead text-muted">
-					In <em>2016-17</em>, we identified a widespread women specific issue and a cause accelerating the
-					poverty, leading to many other social problems, the tradition of <strong>dhukku</strong>. As a
+					In 2016-17, we identified a widespread women specific issue and a cause accelerating the
+					poverty, leading to many other social problems, the tradition of <strong>Dhuku</strong>. As a
 					result, we conducted our first mass marriage of live-in couples in Khunti of 21 couples. Since then,
-					we have conducted similar mass-marriage ceremonies every year, <strong><em>marrying off more than
-							600 couples and improving the life of many others </em> </strong>.
+					we have conducted similar mass-marriage ceremonies every year. As of 2020-21, we have
+					<em>married off more than 600 couples and improved the life of many <strong>women and
+							children</strong></em> .
+				</p>
+				<TODO>View details to a report</TODO>
+			</div>
+			<div class="col-md-4">
+				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+					class="rounded" />
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+					class="rounded" />
+			</div>
+			<div class="col-md-8">
+				<p class="lead text-muted">
+					With support of <em>ONGC</em>, we <em>procured kits for Sahiyya and ANM</em> in the blocks of Karra,
+					Arki, and Khunti in the Khunti district. This resulted in a total of 450 kits for Sahiyya and 150
+					kits for ANMs of these blocks. <em>Kits went above and beyond the specified norms of the district
+						and were targeted at the needs of their users and to handle stresses of the environment</em>.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+
+			<div class="col-md-8">
+				<p class="lead text-muted">
+					Under Neer-Nirmal Pariyojna, we implemented a <em><strong>World Bank project on water and
+							sanitation</strong></em> in 10 villages of Khunti block and district. Through this, we not
+					only <em>raised awareness on water sanitation and hygiene</em>, but also made a DPR on various
+					aspects in association with the DWSD. This project was <em>coordinated at a grassroot level by
+						mobilizing the Gram Panchayat, school children, and SHGs</em> and other stakeholders. We also
+					<em>supported and constructed toilets for the people of <strong>Childag village</strong>, Ratu,
+						Ranchi</em>.
 				</p>
 			</div>
 			<div class="col-md-4">
@@ -199,43 +235,32 @@
 			</div>
 			<div class="col-md-8">
 				<p class="lead text-muted">
-					During 2015-16 we implemented a <em><strong>World Bank project on water and sanitation</strong></em>
-					in 10 villages of Khunti block and district. We not only raised awareness on water and hygiene but
-					also developed DPR of water security plan and supply system, Solid Liquid Waste Management among
-					other activities for all ten villages in Khunti.
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-8">
-				<p class="lead text-muted">
-					During 2014-15 we carried out Birth Registration Training Program, a two day training program was
+					We carried out Birth Registration Training Program, a two day training program was
 					held at ViSWA Centre, Kanke Road, Ranchi for forty registrars and technical staff working in the
-					registration unit of Ranchi, Lohardaga and Khunti districts. The training was funded by UNICEF,
-					conducted by two Assistant Director of ORGI and implemented by NIMITTA.
+					registration unit of Ranchi, Lohardaga and Khunti districts. <em><strong>The training differed from
+							standard training in that it was targeted at providing registeration at government-run
+							hospitals itself, right where the child is born</strong></em>. This completely online
+					training was funded by UNICEF and conducted under the guidance of two Assistant Director of ORGI.
 				</p>
 			</div>
-			<div class="col-md-4">
-				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
-					class="rounded" />
-			</div>
+
 		</div>
 		<div class="row">
+
+			<div class="col-md-8">
+				<p class="lead text-muted">
+					NIMITTA got the opportunity to <em>document the policy changes, innovations and initiatives of the
+						Water and Sanitation Department of Govt. of Jharkhand</em> during 2010 – 2014 in the backdrop of
+					review and revival of national flagship programs NRDWP and NBA <em>in the form of book Abua Raj
+						NawaKhoij: From Policy to Practice has been published by UNDP</em>.</p>
+				<p class="lead text-muted"> We also <em>supported the documentation of various materials at SKIPA, the
+						National Games Committee, Jharkhand and Jharkhand Swimming Association</em> in order to bring
+					out different documents and communication materials.
+				</p>
+			</div>
 			<div class="col-md-4">
 				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
 					class="rounded" />
-			</div>
-			<div class="col-md-8">
-				<p class="lead text-muted">
-					Another milestone was when NIMITTA got the opportunity to document the policy changes, innovations
-					and initiatives of the Water and Sanitation Department of Govt. of Jharkhand during 2010 – 2014 in
-					the backdrop of review and revival of national flagship programs NRDWP and NBA in the form of book
-					Abua Raj NawaKhoij: From Policy to Practice has been published by UNDP. We got an opportunity
-					to work and coordinate with various agencies working in varied areas but dedicated to cause of
-					improving water and sanitation situation in Jharkhand. We also supported the National Games
-					Committee, Jharkhand and Jharkhand Swimming Association in bringing out different documents and
-					communication materials.
-				</p>
 			</div>
 		</div>
 		<div class="row" style="min-height:100px">
@@ -259,7 +284,7 @@
 			</div>
 			<div class="col-md-3">
 				<h5>
-					Our Team
+					Our Founding Members
 				</h5>
 				<ol>
 					<table>
@@ -308,7 +333,7 @@
 								Member
 							</div>
 							<div>
-								Mr. Manas K. Satpathy
+								Mr. Manas Satpathy
 							</div>
 						</div>
 						<div class="people-div">
@@ -316,7 +341,7 @@
 								Member
 							</div>
 							<div>
-								Mr. Ajit Prasad
+								Mr. Ajit K. Prasad
 							</div>
 						</div>
 					</table>
