--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 		</div>
 	</div>
 	<div class="container heading-container heading-text">
-		<h3 class="text-center push-text-down">
+		<h1 class="text-center push-text-down">
 			Nimitta : एक संकल्प
-		</h3>
+		</h1>
 	</div>
 	<div class="container-fluid" id="content-container">
 		<div class="row">
@@ -85,42 +85,52 @@
 					</ol>
 					<div class="carousel-inner">
 						<div class="carousel-item">
-							<img class="d-block w-100" alt="Carousel Bootstrap First"
-								src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg">
+							<img class="d-block w-100" alt="One of our Mass marriage ceremonies"
+								src="/images/dhuku.jpeg">
 							<div class="carousel-caption">
 								<h4>
-									First Thumbnail label
+									Dhuku mass marriage ceremony
 								</h4>
 								<p>
-									Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-									porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+									One of our many Dhuku mass marriages, this photo is from 2019 when we married people
+									from Khunti, Kanke, and Ranchi.
 								</p>
 							</div>
 						</div>
 						<div class="carousel-item active">
-							<img class="d-block w-100" alt="Carousel Bootstrap Second"
-								src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg">
+							<img class="d-block w-100" alt="Carousel Bootstrap Second" src="/images/members.jpeg">
 							<div class="carousel-caption">
 								<h4>
-									Second Thumbnail label
+									Some of our members
 								</h4>
 								<p>
-									Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-									porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+									Some of our members coming together for a Press Release to promote the cause of
+									women empowerment through marriage.
 								</p>
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" alt="Carousel Bootstrap Third"
-								src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg">
+							<img class="d-block w-100" alt="Carousel Bootstrap Third" src="/images/marriage.jpeg">
 							<div class="carousel-caption">
 								<h4>
-									Third Thumbnail label
+									A Happy couple, just having been married
 								</h4>
 								<p>
-									Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
-									porta gravijfljasdljfljasldkjflda at eget metus. Nullam id dolor id nibh ultricies
-									vehicula ut id elit.
+									While our geographical reach might be small, our inclusion isn't. We have provided
+									for the marriage of many Dhuku couples, regardless of age, religion or ability.
+								</p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" alt="Carousel Bootstrap Third" src="/images/sahinyya-kits.jpeg">
+							<div class="carousel-caption">
+								<h4>
+									Custom Made Sahiyya kits, just waiting to be delivered.
+								</h4>
+								<p>
+									Sahiyya (and ANM) kits were custom made after realising the requirements of their
+									users. This enabled us to zero in on the needs of ANM workers and Sahiyya to ensure
+									most utility.
 								</p>
 							</div>
 						</div>
@@ -131,6 +141,7 @@
 				</div>
 			</div>
 		</div>
+		<hr>
 		<div class="row">
 			<div class="col-md-4">
 				<h3>
@@ -178,8 +189,9 @@
 				</p> -->
 			</div>
 		</div>
+		<hr>
 		<h4>Our life changing initiatives are : </h4>
-		<div class="row">
+		<div class="row works-field">
 			<div class="col-md-8">
 				<p class="lead text-muted">
 					In 2016-17, we identified a widespread women specific issue and a cause accelerating the
@@ -191,13 +203,14 @@
 				</p>
 				<TODO>View details to a report</TODO>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 image-end">
 				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
 					class="rounded" />
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
+		<hr>
+		<div class="row works-field">
+			<div class="col-md-4 image-start">
 				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
 					class="rounded" />
 			</div>
@@ -210,7 +223,8 @@
 				</p>
 			</div>
 		</div>
-		<div class="row">
+		<hr>
+		<div class="row works-field">
 
 			<div class="col-md-8">
 				<p class="lead text-muted">
@@ -223,13 +237,14 @@
 						Ranchi</em>.
 				</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 image-end">
 				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
 					class="rounded" />
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
+		<hr>
+		<div class="row works-field">
+			<div class="col-md-4 image-start">
 				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
 					class="rounded" />
 			</div>
@@ -245,7 +260,8 @@
 			</div>
 
 		</div>
-		<div class="row">
+		<hr>
+		<div class="row works-field">
 
 			<div class="col-md-8">
 				<p class="lead text-muted">
@@ -258,11 +274,12 @@
 					out different documents and communication materials.
 				</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 image-end">
 				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
 					class="rounded" />
 			</div>
 		</div>
+		<hr>
 		<div class="row" style="min-height:100px">
 			<div class="col-md-3">
 				<h5>
