--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 						</li>
 						<li data-slide-to="2" data-target="#carousel-98305">
 						</li>
+						<li data-slide-to="3" data-target="#carousel-98305">
+						</li>
 					</ol>
 					<div class="carousel-inner">
 						<div class="carousel-item">
@@ -98,7 +100,7 @@
 							</div>
 						</div>
 						<div class="carousel-item active">
-							<img class="d-block w-100" alt="Carousel Bootstrap Second" src="/images/members.jpeg">
+							<img class="d-block w-100" alt="Some of our members" src="/images/members.jpeg">
 							<div class="carousel-caption">
 								<h4>
 									Some of our members
@@ -110,7 +112,7 @@
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" alt="Carousel Bootstrap Third" src="/images/marriage.jpeg">
+							<img class="d-block w-100" alt="A Happy couple, just having been married" src="/images/marriage.jpeg">
 							<div class="carousel-caption">
 								<h4>
 									A Happy couple, just having been married
@@ -122,7 +124,7 @@
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" alt="Carousel Bootstrap Third" src="/images/sahinyya-kits.jpeg">
+							<img class="d-block w-100" alt="Custom Made Sahiyya kits, just waiting to be delivered." src="/images/sahinyya-kits.jpeg">
 							<div class="carousel-caption">
 								<h4>
 									Custom Made Sahiyya kits, just waiting to be delivered.
