Design changes and cover image for mass marriage

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" alt="A Happy couple, just having been married" src="/images/marriage.jpeg">
+							<img class="d-block w-100" alt="A Happy couple, just having been married"
+								src="/images/marriage.jpeg">
 							<div class="carousel-caption">
 								<h4>
 									A Happy couple, just having been married
@@ -124,7 +125,8 @@
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100" alt="Custom Made Sahiyya kits, just waiting to be delivered." src="/images/sahinyya-kits.jpeg">
+							<img class="d-block w-100" alt="Custom Made Sahiyya kits, just waiting to be delivered."
+								src="/images/sahinyya-kits.jpeg">
 							<div class="carousel-caption">
 								<h4>
 									Custom Made Sahiyya kits, just waiting to be delivered.
@@ -192,94 +194,169 @@
 			</div>
 		</div>
 		<hr>
-		<h4>Our life changing initiatives are : </h4>
+		<div class="row" style="background-color: var(--secondary-color);border-bottom: 20px solid white;padding:15px;">
+			<h4>Our life changing initiatives are : </h4>
+		</div>
 		<div class="row works-field">
-			<div class="col-md-8">
-				<p class="lead text-muted">
-					In 2016-17, we identified a widespread women specific issue and a cause accelerating the
-					poverty, leading to many other social problems, the tradition of <strong>Dhuku</strong>. As a
-					result, we conducted our first mass marriage of live-in couples in Khunti of 21 couples. Since then,
-					we have conducted similar mass-marriage ceremonies every year. As of 2020-21, we have
-					<em>married off more than 600 couples and improved the life of many <strong>women and
-							children</strong></em> .
-				</p>
-				<TODO>View details to a report</TODO>
+			<div class="col-md-5">
+				<div style="display:grid;grid-template-rows: 1fr 4fr;">
+					<h4>Gender : Mass-Marriage</h4>
+					<p class="lead text-muted">
+						In 2016-17, we identified a widespread women specific issue and a cause accelerating the
+						poverty, leading to many other social problems, the tradition of <strong>Dhuku</strong>. As a
+						result, we conducted our first mass marriage of live-in couples in Khunti of 21 couples. Since
+						then,
+						we have conducted similar mass-marriage ceremonies every year. As of 2020-21, we have
+						<em>married off more than 600 couples and improved the life of many <strong>women and
+								children</strong></em> .
+					</p>
+					<!-- <TODO>View details to a report</TODO> -->
+				</div>
 			</div>
-			<div class="col-md-4 image-end">
-				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+			<div class="col-md-1">
+
+			</div>
+			<div class="col-md-6 image-end">
+				<img alt="Bootstrap Image Preview"
+					src="/images/work_marriage.jpg"
 					class="rounded" />
 			</div>
 		</div>
 		<hr>
 		<div class="row works-field">
-			<div class="col-md-4 image-start">
-				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+			<div class="col-md-6 image-start">
+				<img alt="Bootstrap Image Preview"
+					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
 					class="rounded" />
 			</div>
-			<div class="col-md-8">
-				<p class="lead text-muted">
-					With support of <em>ONGC</em>, we <em>procured kits for Sahiyya and ANM</em> in the blocks of Karra,
-					Arki, and Khunti in the Khunti district. This resulted in a total of 450 kits for Sahiyya and 150
-					kits for ANMs of these blocks. <em>Kits went above and beyond the specified norms of the district
-						and were targeted at the needs of their users and to handle stresses of the environment</em>.
-				</p>
+			<div class="col-md-1">
+
 			</div>
+			<div class="col-md-5">
+				<div style="display:grid;grid-template-rows: 1fr 4fr;">
+					<h4>Health</h4>
+					<p class="lead text-muted">
+						With support of <em>ONGC</em>, we <em>procured kits for Sahiyya and ANM</em> in the blocks of
+						Karra,
+						Arki, and Khunti in the Khunti district. This resulted in a total of 450 kits for Sahiyya and
+						150
+						kits for ANMs of these blocks. <em>Kits went above and beyond the specified norms of the
+							district
+							and were targeted at the needs of their users and to handle stresses of the
+							environment</em>.
+					</p>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<div class="row works-field">
+			<div class="col-md-5">
+				<div style="display:grid;grid-template-rows: 1fr 4fr;">
+					<h4>Covid Relief</h4>
+					<p class="lead text-muted">
+						During COVID, we provided ration to about 10600 families through the district administration. We
+						also provided soap to more than 11000 frontline workers of Ranchi district, helped the stranded
+						migrant labourers originating from different parts of Jharkhand but living across India join
+						back with their families.
+					</p>
+				</div>
+			</div>
+			<div class="col-md-1">
+
+			</div>
+			<div class="col-md-6 image-end">
+				<img alt="Bootstrap Image Preview"
+					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
+					class="rounded" />
+			</div>
+		</div>
+		<hr>
+		<div class="row works-field">
+			<div class="col-md-6 image-start">
+				<img alt="Bootstrap Image Preview"
+					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
+					class="rounded" />
+			</div>
+			<div class="col-md-1">
+
+			</div>
+			<div class="col-md-5">
+				<div style="display:grid;grid-template-rows: 1fr 4fr;">
+					<h4>Water & Sanitation</h4>
+					<p class="lead text-muted">
+						Under Neer-Nirmal Pariyojna, we implemented a <em><strong>World Bank project on water and
+								sanitation</strong></em> in 10 villages of Khunti block and district. Through this, we
+						not
+						only <em>raised awareness on water sanitation and hygiene</em>, but also made a DPR on various
+						aspects in association with the DWSD. This project was <em>coordinated at a grassroot level by
+							mobilizing the Gram Panchayat, school children, and SHGs</em> and other stakeholders. We
+						also
+						<em>supported and constructed toilets for the people of <strong>Childag village</strong>, Ratu,
+							Ranchi</em>.
+					</p>
+				</div>
+			</div>
+
 		</div>
 		<hr>
 		<div class="row works-field">
 
-			<div class="col-md-8">
-				<p class="lead text-muted">
-					Under Neer-Nirmal Pariyojna, we implemented a <em><strong>World Bank project on water and
-							sanitation</strong></em> in 10 villages of Khunti block and district. Through this, we not
-					only <em>raised awareness on water sanitation and hygiene</em>, but also made a DPR on various
-					aspects in association with the DWSD. This project was <em>coordinated at a grassroot level by
-						mobilizing the Gram Panchayat, school children, and SHGs</em> and other stakeholders. We also
-					<em>supported and constructed toilets for the people of <strong>Childag village</strong>, Ratu,
-						Ranchi</em>.
-				</p>
+
+			<div class="col-md-5">
+				<div style="display:grid;grid-template-rows: 1fr 4fr;">
+					<h4>Birth registration</h4>
+					<p class="lead text-muted">
+						We carried out Birth Registration Training Program, a two day training program was
+						held at ViSWA Centre, Kanke Road, Ranchi for forty registrars and technical staff working in the
+						registration unit of Ranchi, Lohardaga and Khunti districts. <em><strong>The training differed
+								from
+								standard training in that it was targeted at providing registeration at government-run
+								hospitals itself, right where the child is born</strong></em>. This completely online
+						training was funded by UNICEF and conducted under the guidance of two Assistant Director of
+						ORGI.
+					</p>
+				</div>
 			</div>
-			<div class="col-md-4 image-end">
-				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+			<div class="col-md-1">
+
+			</div>
+			<div class="col-md-6 image-end">
+				<img alt="Bootstrap Image Preview"
+					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
 					class="rounded" />
-			</div>
-		</div>
-		<hr>
-		<div class="row works-field">
-			<div class="col-md-4 image-start">
-				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
-					class="rounded" />
-			</div>
-			<div class="col-md-8">
-				<p class="lead text-muted">
-					We carried out Birth Registration Training Program, a two day training program was
-					held at ViSWA Centre, Kanke Road, Ranchi for forty registrars and technical staff working in the
-					registration unit of Ranchi, Lohardaga and Khunti districts. <em><strong>The training differed from
-							standard training in that it was targeted at providing registeration at government-run
-							hospitals itself, right where the child is born</strong></em>. This completely online
-					training was funded by UNICEF and conducted under the guidance of two Assistant Director of ORGI.
-				</p>
 			</div>
 
 		</div>
 		<hr>
 		<div class="row works-field">
-
-			<div class="col-md-8">
-				<p class="lead text-muted">
-					NIMITTA got the opportunity to <em>document the policy changes, innovations and initiatives of the
-						Water and Sanitation Department of Govt. of Jharkhand</em> during 2010 – 2014 in the backdrop of
-					review and revival of national flagship programs NRDWP and NBA <em>in the form of book Abua Raj
-						NawaKhoij: From Policy to Practice has been published by UNDP</em>.</p>
-				<p class="lead text-muted"> We also <em>supported the documentation of various materials at SKIPA, the
-						National Games Committee, Jharkhand and Jharkhand Swimming Association</em> in order to bring
-					out different documents and communication materials.
-				</p>
-			</div>
-			<div class="col-md-4 image-end">
-				<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg"
+			<div class="col-md-6 image-start">
+				<img alt="Bootstrap Image Preview"
+					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
 					class="rounded" />
 			</div>
+			<div class="col-md-1">
+
+			</div>
+			<div class="col-md-5">
+				<div style="display:grid;grid-template-rows: 1fr 4fr;">
+					<h4>Documentation</h4>
+					<p class="lead text-muted">
+						NIMITTA got the opportunity to <em>document the policy changes, innovations and initiatives of
+							the
+							Water and Sanitation Department of Govt. of Jharkhand</em> during 2010 – 2014 in the
+						backdrop of
+						review and revival of national flagship programs NRDWP and NBA <em>in the form of book Abua Raj
+							NawaKhoij: From Policy to Practice has been published by UNDP</em>.</p>
+					<p class="lead text-muted"> We also <em>supported the documentation of various materials at SKIPA,
+							the
+							National Games Committee, Jharkhand and Jharkhand Swimming Association</em> in order to
+						bring
+						out different documents and communication materials.
+					</p>
+				</div>
+			</div>
+
+
 		</div>
 		<hr>
 		<div class="row" style="min-height:100px">
