--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 		}
 	</script>
 	<div class="bg-img">
-
 	</div>
 	<div class="container-fluid" id="popup-div" onclick="onClickClose()">
 		<div class="row">
@@ -65,87 +64,66 @@
 			</div>
 		</div>
 	</div>
-	<div class="container heading-container heading-text">
+	<div class="container-fluid heading-container heading-text">
 		<h1 class="text-center push-text-down">
 			Nimitta : एक संकल्प
 		</h1>
 	</div>
-	<div class="container-fluid" id="content-container">
-		<div class="row">
-			<div class="col-md-12">
-
-				<div class="carousel slide" id="carousel-98305">
-					<ol class="carousel-indicators">
-						<li data-slide-to="0" data-target="#carousel-98305">
-						</li>
-						<li data-slide-to="1" data-target="#carousel-98305" class="active">
-						</li>
-						<li data-slide-to="2" data-target="#carousel-98305">
-						</li>
-						<li data-slide-to="3" data-target="#carousel-98305">
-						</li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="carousel-item">
-							<img class="d-block w-100" alt="One of our Mass marriage ceremonies"
-								src="/images/dhuku.jpeg">
-							<div class="carousel-caption">
-								<h4>
-									Dhuku mass marriage ceremony
-								</h4>
-								<p>
-									One of our many Dhuku mass marriages, this photo is from 2019 when we married people
-									from Khunti, Kanke, and Ranchi.
-								</p>
-							</div>
-						</div>
-						<div class="carousel-item active">
-							<img class="d-block w-100" alt="Some of our members" src="/images/members.jpeg">
-							<div class="carousel-caption">
-								<h4>
-									Some of our members
-								</h4>
-								<p>
-									Some of our members coming together for a Press Release to promote the cause of
-									women empowerment through marriage.
-								</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100" alt="A Happy couple, just having been married"
-								src="/images/marriage.jpeg">
-							<div class="carousel-caption">
-								<h4>
-									A Happy couple, just having been married
-								</h4>
-								<p>
-									While our geographical reach might be small, our inclusion isn't. We have provided
-									for the marriage of many Dhuku couples, regardless of age, religion or ability.
-								</p>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-block w-100" alt="Custom Made Sahiyya kits, just waiting to be delivered."
-								src="/images/sahinyya-kits.jpeg">
-							<div class="carousel-caption">
-								<h4>
-									Custom Made Sahiyya kits, just waiting to be delivered.
-								</h4>
-								<p>
-									Sahiyya (and ANM) kits were custom made after realising the requirements of their
-									users. This enabled us to zero in on the needs of ANM workers and Sahiyya to ensure
-									most utility.
-								</p>
-							</div>
-						</div>
-					</div> <a class="carousel-control-prev" href="#carousel-98305" data-slide="prev"><span
-							class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a
-						class="carousel-control-next" href="#carousel-98305" data-slide="next"><span
-							class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+	<div class="container">
+		<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" id="content-container">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="/images/dhuku.jpeg" class="d-block w-100" alt="...">
+					<div class="carousel-caption">
+						<h4>
+							Dhuku mass marriage ceremony
+						</h4>
+						<p>
+							One of our many Dhuku mass marriages, this photo is from 2019 when we married people
+							from Khunti, Kanke, and Ranchi.
+						</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/members_1.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption">
+						<h4>
+							Some of our members
+						</h4>
+						<p>
+							Some of our members coming together for a Press Release to promote the cause of
+							women empowerment through marriage.
+						</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/marriage.jpeg" class="d-block w-100" alt="...">
+					<div class="carousel-caption">
+						<h4>
+							A Happy couple, just having been married
+						</h4>
+						<p>
+							While our geographical reach might be small, our inclusion isn't. We have provided
+							for the marriage of many Dhuku couples, regardless of age, religion or ability.
+						</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/sahinyya-kits.jpeg" class="d-block w-100" alt="...">
+					<div class="carousel-caption">
+						<h4>
+							Custom Made Sahiyya kits, just waiting to be delivered.
+						</h4>
+						<p>
+							Sahiyya (and ANM) kits were custom made after realising the requirements of their
+							users. This enabled us to zero in on the needs of ANM workers and Sahiyya to ensure
+							most utility.
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
-		<hr>
+		<hr size="3px">
 		<div class="row">
 			<div class="col-md-4">
 				<h3>
@@ -193,12 +171,12 @@
 				</p> -->
 			</div>
 		</div>
-		<hr>
+		<hr size="3px">
 		<div class="row" style="background-color: var(--secondary-color);border-bottom: 20px solid white;padding:15px;">
 			<h4>Our life changing initiatives are : </h4>
 		</div>
 		<div class="row works-field">
-			<div class="col-md-5">
+			<div class="col-sm-5">
 				<div style="display:grid;grid-template-rows: 1fr 4fr;">
 					<h4>Gender : Mass-Marriage</h4>
 					<p class="lead text-muted">
@@ -213,26 +191,62 @@
 					<!-- <TODO>View details to a report</TODO> -->
 				</div>
 			</div>
-			<div class="col-md-1">
-
+			<div class="col-sm-1">
 			</div>
-			<div class="col-md-6 image-end">
-				<img alt="Bootstrap Image Preview"
-					src="/images/work_marriage.jpg"
-					class="rounded" />
+			<div class="col-sm-6">
+				<div id="mm_slides" class="carousel slide rounded image-end" data-bs-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_1.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_2.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_3.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_4.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>"
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_5.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_6.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_7.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_8.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<hr>
+		<hr size="3px">
 		<div class="row works-field">
-			<div class="col-md-6 image-start">
-				<img alt="Bootstrap Image Preview"
-					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
-					class="rounded" />
+			<div class="col-sm-6">
+				<div id="health_slides" class="carousel slide rounded image-start" data-bs-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active" data-bs-interval=5000>
+							<img src="/images/mass marriage/conv_mm_8.JPG" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-1">
-
+			<div class="col-sm-1">
 			</div>
-			<div class="col-md-5">
+			<div class="col-sm-5">
 				<div style="display:grid;grid-template-rows: 1fr 4fr;">
 					<h4>Health</h4>
 					<p class="lead text-muted">
@@ -248,9 +262,9 @@
 				</div>
 			</div>
 		</div>
-		<hr>
+		<hr size="3px">
 		<div class="row works-field">
-			<div class="col-md-5">
+			<div class="col-sm-5">
 				<div style="display:grid;grid-template-rows: 1fr 4fr;">
 					<h4>Covid Relief</h4>
 					<p class="lead text-muted">
@@ -261,26 +275,46 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-md-1">
+			<div class="col-sm-1">
 
 			</div>
-			<div class="col-md-6 image-end">
+			<div class="col-sm-6 image-end">
 				<img alt="Bootstrap Image Preview"
 					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
 					class="rounded" />
 			</div>
 		</div>
-		<hr>
+		<hr size="3px">
 		<div class="row works-field">
-			<div class="col-md-6 image-start">
-				<img alt="Bootstrap Image Preview"
-					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
-					class="rounded" />
+			<div class="col-sm-6">
+				<div id="mm_slides" class="carousel slide rounded image-start" data-bs-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active" data-bs-interval=5000>
+							<img src="/images/Water and Sanitation/conv_ws_1.jpg" loading="lazy"
+								class="d-block w-100 rounded" alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Water and Sanitation/conv_ws_2.jpg" loading="lazy"
+								class="d-block w-100 rounded" alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Water and Sanitation/conv_ws_3.JPG" loading="lazy"
+								class="d-block w-100 rounded" alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Water and Sanitation/conv_ws_4.jpg" loading="lazy"
+								class="d-block w-100 rounded" alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Water and Sanitation/conv_ws_5.jpg" loading="lazy"
+								class="d-block w-100 rounded" alt="...">
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-1">
-
+			<div class="col-sm-1">
 			</div>
-			<div class="col-md-5">
+			<div class="col-sm-5">
 				<div style="display:grid;grid-template-rows: 1fr 4fr;">
 					<h4>Water & Sanitation</h4>
 					<p class="lead text-muted">
@@ -298,11 +332,9 @@
 			</div>
 
 		</div>
-		<hr>
+		<hr size="3px">
 		<div class="row works-field">
-
-
-			<div class="col-md-5">
+			<div class="col-sm-5">
 				<div style="display:grid;grid-template-rows: 1fr 4fr;">
 					<h4>Birth registration</h4>
 					<p class="lead text-muted">
@@ -317,27 +349,48 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-md-1">
+			<div class="col-sm-1">
 
 			</div>
-			<div class="col-md-6 image-end">
-				<img alt="Bootstrap Image Preview"
-					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
-					class="rounded" />
+			<div class="col-sm-6">
+				<div id="br_slides" class="carousel slide rounded image-end" data-bs-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active" data-bs-interval=5000>
+							<img src="/images/Birth Registration/conv_br_1.jpg" loading="lazy"
+								class="d-block w-100 rounded" alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Birth Registration/conv_br_2.jpg" loading="lazy"
+								class="d-block w-100 rounded" alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Birth Registration/conv_br_3.jpg" loading="lazy"
+								class="d-block w-100 rounded" alt="...">
+						</div>
+					</div>
+				</div>
 			</div>
-
 		</div>
-		<hr>
+		<hr size="3px">
 		<div class="row works-field">
-			<div class="col-md-6 image-start">
-				<img alt="Bootstrap Image Preview"
-					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
-					class="rounded" />
+			<div class="col-sm-6">
+				<div id="mm_slides" class="carousel slide rounded image-start" data-bs-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active" data-bs-interval=5000>
+							<img src="/images/Documentation/conv_d_1.jpg" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Documentation/conv_d_2.jpg" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="col-md-1">
+			<div class="col-sm-1">
 
 			</div>
-			<div class="col-md-5">
+			<div class="col-sm-5">
 				<div style="display:grid;grid-template-rows: 1fr 4fr;">
 					<h4>Documentation</h4>
 					<p class="lead text-muted">
@@ -358,7 +411,7 @@
 
 
 		</div>
-		<hr>
+		<hr size="3px">
 		<div class="row" style="min-height:100px">
 			<div class="col-md-3">
 				<h5>
@@ -454,6 +507,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 
 	<script src="js/jquery.min.js"></script>
