add back more images

--- a/index.html
+++ b/index.html
@@ -238,7 +238,23 @@
 				<div id="health_slides" class="carousel slide rounded image-start" data-bs-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active" data-bs-interval=5000>
-							<img src="/images/mass marriage/conv_mm_8.JPG" loading="lazy" class="d-block w-100 rounded"
+							<img src="/images/Health/conv_h_1.jpeg" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Health/conv_h_2.jpeg" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Health/conv_h_3.jpeg" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Health/conv_h_4.jpeg" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class="carousel-item" data-bs-interval=5000>
+							<img src="/images/Health/conv_h_5.jpeg" loading="lazy" class="d-block w-100 rounded"
 								alt="...">
 						</div>
 					</div>
@@ -279,9 +295,75 @@
 
 			</div>
 			<div class="col-sm-6 image-end">
-				<img alt="Bootstrap Image Preview"
-					src="https://i.picsum.photos/id/62/320/200.jpg?hmac=x-KNaRAbUkYuR4RwR3nQD_fMsQhaP49PyREUW8zzdZA"
-					class="rounded" />
+				<div id="covid_slides" class="carousel slide rounded image-end" data-bs-ride="carousel">
+
+					<div class="carousel-inner">
+						<div class="carousel-item active" data-bs-interval=5000>
+							<img src="/images/Covid/conv_c_1.jpeg" loading="lazy" class="d-block w-100 rounded"
+								alt="...">
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_10.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_11.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_12.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_13.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_15.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_16.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_1.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_2.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_3.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<!-- <div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_4.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_5.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_6.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_7.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div> -->
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_8.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+						<div class='carousel-item' data-bs-interval=5000>
+							<img src='/images/Covid/conv_c_9.jpeg' loading='lazy' class='d-block w-100 rounded'
+								alt='...'>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<hr size="3px">
@@ -388,7 +470,6 @@
 				</div>
 			</div>
 			<div class="col-sm-1">
-
 			</div>
 			<div class="col-sm-5">
 				<div style="display:grid;grid-template-rows: 1fr 4fr;">
@@ -430,6 +511,11 @@
 				<h5>
 					For the Press
 				</h5>
+				<ol>
+					<li>
+						
+					</li>
+				</ol>
 			</div>
 			<div class="col-md-3">
 				<h5>
